--- a/full_stationlist/grid_to_stationfile_maps.yml
+++ b/full_stationlist/grid_to_stationfile_maps.yml
@@ -10,25 +10,25 @@ GRIDMAP: &gridmap
     CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/contrails_stations_coastal.csv"
     NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/ndbc_buoys.csv"
  REGION3:
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/Region3_Stations_V2.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/Region3_Stations_V2.csv"
  NC_INUNDATION_V9.99_W_RIVERS: 
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCV99_Stations_V1.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCV99_Stations_V1.csv"
  NC_INUNDATION_V9.99D: 
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCV99_Stations_V1.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCV99_Stations_V1.csv"
  LA_V20A-WITHUPPERATCH_CHK: 
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/LA_v20a-WithUpperAtch_chk_Stations_V1.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/LA_v20a-WithUpperAtch_chk_Stations_V1.csv"
  URIV18: 
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/uriv18_stations_V1.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/uriv18_stations_V1.csv"
  URIV18_CL: 
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/uriv18_stations_V1.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/uriv18_stations_V1.csv"
  NCSC_SAB_V1.15: 
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC115_stations_V1.0.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC115_stations_V1.0.csv"
  NCSC_SAB_V1.20:
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC120_stations_V1.0.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC120_stations_V1.0.csv"
  NCSC_SAB_V1.23:
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC123_stations_V1.0.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC123_stations_V1.0.csv"
  SABV20A: 
-    STATIONS: "./AST_gridstations/full_stationlist/supporting_data/SABv20a_stations_V1.0.csv"
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/SABv20a_stations_V1.0.csv"
 
 DESCRIPTION: &description
    DESCRIBE: 'A configuration file used by the several application codes. Maps grid name to a specific station list and (opt) land/water control points'
