--- a/full_stationlist/grid_to_stationfile_maps.yml
+++ b/full_stationlist/grid_to_stationfile_maps.yml
@@ -18,6 +18,7 @@ GRIDMAP: &gridmap
     NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/ndbc_buoys.csv"
  NC_INUNDATION_V9.99D: 
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCV99_Stations_V1.csv"
+    NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/ndbc_buoys.csv"
  LA_V20A-WITHUPPERATCH_CHK: 
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/LA_v20a-WithUpperAtch_chk_Stations_V1.csv"
  URIV18: 
@@ -37,6 +38,7 @@ GRIDMAP: &gridmap
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/SABv20a_stations_V1.0.csv"
  EGOMV20B:
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/EGOMv20b_stations_V1.csv"
+    NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/ndbc_buoys.csv"
 
 
 DESCRIPTION: &description
