--- a/harvester_stations/sources_map.yaml
+++ b/harvester_stations/sources_map.yaml
@@ -1,31 +1,31 @@
 SOURCEMAP: &sourcemap
-#  NOAA: 
-#      STATION_FILE: "./AST_gridstations/harvester_stations/supporting_data/noaa_stations.csv"
-#      SOURCES:
-#          WATR: "water_level"
-#          PRED: "predictions"
-#          PRES: "air_pressure"
-#          WSPD: "wind_speed"
-
-  CONTRAILSRIVER:
-      STATION_FILE: "./AST_gridstations/harvester_stations/supporting_data/contrails_stations_rivers_largelist.csv"
+  NOAA: 
+      STATION_FILE: "./AST_gridstations/harvester_stations/supporting_data/noaa_stations.csv"
       SOURCES:
-          WATR: "river_water_level"
-          FVOL: "river_flow_volume"
+          WATR: "water_level"
+          PRED: "predictions"
           PRES: "air_pressure"
+          WSPD: "wind_speed"
 
-  CONTRAILSCOASTAL:
-      STATION_FILE: "./AST_gridstations/harvester_stations/supporting_data/contrails_stations_coastal.csv"
-      SOURCES:
-          WATR: "coastal_water_level"
-          PRES: "air_pressure"
-
-#  NDBC:
-#      STATION_FILE: "./AST_gridstations/harvester_stations/supporting_data/ndbc_buoys.csv"
+#  CONTRAILSRIVER:
+#      STATION_FILE: "./AST_gridstations/harvester_stations/supporting_data/contrails_stations_rivers_largelist.csv"
 #      SOURCES:
-#          WATR: "wave_height"
+#          WATR: "river_water_level"
+#          FVOL: "river_flow_volume"
 #          PRES: "air_pressure"
-#          WSPD: "wind_speed"
+
+#  CONTRAILSCOASTAL:
+#      STATION_FILE: "./AST_gridstations/harvester_stations/supporting_data/contrails_stations_coastal.csv"
+#      SOURCES:
+#          WATR: "coastal_water_level"
+#          PRES: "air_pressure"
+
+  NDBC:
+      STATION_FILE: "./AST_gridstations/harvester_stations/supporting_data/ndbc_buoys.csv"
+      SOURCES:
+          WATR: "wave_height"
+          PRES: "air_pressure"
+          WSPD: "wind_speed"
 
 DESCRIPTION: &description
    DESCRIBE: 'A list of sources and data products to process using run_harvester'
