--- a/interpolation_stationlist/grid_to_stationfile_maps.yml
+++ b/interpolation_stationlist/grid_to_stationfile_maps.yml
@@ -21,6 +21,8 @@ GRIDMAP: &gridmap
     NOAA_STATIONS: "./AST_gridstations/interpolation_stationlist/supporting_data/NCV99_Stations_V1.csv"
  NC_INUNDATION_V9.99D: 
     NOAA_STATIONS: "./AST_gridstations/interpolation_stationlist/supporting_data/NCV99_Stations_V1.csv"
+ CPRA_2023_V18A:
+    NOAA_STATIONS: "./AST_gridstations/interpolation_stationlist/supporting_data/cpra_2023_v18a_chk.csv" 
  CPRA_2023_V18A_CHK:
     NOAA_STATIONS: "./AST_gridstations/interpolation_stationlist/supporting_data/cpra_2023_v18a_chk.csv" 
  LA_V20A-WITHUPPERATCH_CHK: 
