Corrected bungled NDBC source filename

--- a/harvester_stations/sources_map.yaml
+++ b/harvester_stations/sources_map.yaml
@@ -24,7 +24,7 @@ SOURCEMAP: &sourcemap
           PRES: "air_pressure"
 
   NDBC_BUOYS:
-:x
+      STATION_FILE: "./AST_gridstations/harvester_stations/supporting_data/ndbc_buoys.csv"
       VARIABLE: "swan_HS"
       SOURCES:
           WATR: "wave_height"
