--- a/full_stationlist/grid_to_stationfile_maps.yml
+++ b/full_stationlist/grid_to_stationfile_maps.yml
@@ -25,6 +25,7 @@ GRIDMAP: &gridmap
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/cpra_2023_v18a_chk.csv" 
  CPRA_2023_V19A:
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/cpra_2023_v19a_chk.csv" 
+    NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/cpra_2023_v19a_ndbc_buoys.csv"
  CPRA_2023_V19A_CHK:
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/cpra_2023_v19a_chk.csv" 
  LA_V20A-WITHUPPERATCH_CHK: 
