--- a/full_stationlist/grid_to_stationfile_maps.yml
+++ b/full_stationlist/grid_to_stationfile_maps.yml
@@ -1,8 +1,8 @@
 GRIDMAP: &gridmap
  HSOFS:
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/CERA_NOAA_HSOFS_stations_V3.1.csv"
-    #CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/contrails_stations_rivers.csv"
-    #CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/contrails_stations_coastal.csv"
+    CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/contrails_stations_rivers.csv"
+    CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/contrails_stations_coastal.csv"
     NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/HSOFS_ndbc_buoys.csv"
  EC95D:
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/ec95d_stations.V1.csv"
@@ -13,8 +13,8 @@ GRIDMAP: &gridmap
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/Region3_Stations_V2.csv"
  NC_INUNDATION_V9.99_W_RIVERS: 
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCV99_Stations_V1.csv"
-    #CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/contrails_stations_rivers.csv"
-    #CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/contrails_stations_coastal.csv"
+    CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/contrails_stations_rivers.csv"
+    CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/contrails_stations_coastal.csv"
     NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/ndbc_buoys.csv"
  NC_INUNDATION_V9.99D: 
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCV99_Stations_V1.csv"
@@ -45,13 +45,13 @@ GRIDMAP: &gridmap
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC120_stations_V1.0.csv"
  NCSC_SAB_V1.23:
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC123_stations_V2.0.csv"
-    #CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_rivers.csv"
-    #CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_coastal.csv"
+    CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_rivers.csv"
+    CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_coastal.csv"
     NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/NCSC123_ndbc_buoys.csv" 
  NCSC123:
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC123_stations_V2.0.csv"
-    #CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_rivers.csv"
-    #CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_coastal.csv"
+    CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_rivers.csv"
+    CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_coastal.csv"
     NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/NCSC123_ndbc_buoys.csv" 
  SABV20A: 
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/SABv20a_stations_V1.0.csv"
