--- a/full_stationlist/grid_to_stationfile_maps.yml
+++ b/full_stationlist/grid_to_stationfile_maps.yml
@@ -64,6 +64,9 @@ GRIDMAP: &gridmap
  EGOMV20B:
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/EGOMv20b_stations_V1.csv"
     NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/ndbc_buoys.csv"
+ NGOM-RT_V19B:
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/EGOMv20b_stations_V1.csv"
+    NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/ndbc_buoys.csv"
  WNAT_53K_V1.0:
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/wnat_53k_v1.0.csv"
  LA_LIGHT_V01A:
