--- a/full_stationlist/grid_to_stationfile_maps.yml
+++ b/full_stationlist/grid_to_stationfile_maps.yml
@@ -53,6 +53,11 @@ GRIDMAP: &gridmap
     CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_rivers.csv"
     CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_coastal.csv"
     NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/NCSC123_ndbc_buoys.csv" 
+ NCSCV2.0: 
+    NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/NCSC123_stations_V2.0.csv"
+    CONTRAILS_RIVERS: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_rivers.csv"
+    CONTRAILS_COASTAL: "./AST_gridstations/full_stationlist/supporting_data/ncsc123_contrails_stations_coastal.csv"
+    NDBC_BUOYS: "./AST_gridstations/full_stationlist/supporting_data/NCSCv20_ndbc_buoys.csv"
  SABV20A: 
     NOAA_STATIONS: "./AST_gridstations/full_stationlist/supporting_data/SABv20a_stations_V1.0.csv"
  EGOM_RT_V20B:
